--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -37,5 +37,10 @@
     <string name="secure_connect">Connect a device - Secure</string>
     <string name="insecure_connect">Connect a device - Insecure</string>
     <string name="discoverable">Make discoverable</string>
+    <string name="reset_sensor_storage">Reset sensor storage</string>
+    <string name="reset_local_storage">Reset local storage</string>
+
+    <!-- Toast messages -->
+    <string name="sent_sync">Sync command sent</string>
 
 </resources>
