--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="discoverable">Make discoverable</string>
     <string name="reset_sensor_storage">Reset sensor storage</string>
     <string name="reset_local_storage">Reset local storage</string>
+    <string name="export_data">Export data</string>
 
     <!-- Toast messages -->
     <string name="sent_sync">Sync command sent</string>
